# torendo

./: .gitignore  README.md  ai.py  analysis.ipynb  app.py  data.py  pyproject.toml  requirements.txt
